@@ -1,18 +1,0 @@
-<?xml version="1.0"?>
-<!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
-               "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
-<book id="index" xmlns:xi="http://www.w3.org/2003/XInclude">
-  <bookinfo>
-    <title>tester Reference Manual</title>
-    <releaseinfo>
-      for tester [VERSION]
-      The latest version of this documentation can be found on-line at
-      <ulink role="online-location" url="http://[SERVER]/tester/index.html">http://[SERVER]/tester/</ulink>.
-    </releaseinfo>
-  </bookinfo>
-
-  <chapter>
-    <title>[Insert title here]</title>
-    <xi:include href="xml/tester.xml"/>
-  </chapter>
-</book>
