@@ -1,3 +1,11 @@
+2007-12-17  Stefan Kost  <ensonic@users.sf.net>
+
+	* tests/bugs/docs/tester-docs.sgml:
+	* tests/bugs/docs/tester-docs.xml:
+	* tests/gobject/docs/tester-docs.sgml:
+	* tests/gobject/docs/tester-docs.xml:
+	  Add the xml instead of the sgml docs.
+
 2007-12-12  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtk-doc.make:
